feat: enhance member service commands with validation annotations and improve internal API structure